src/mongo/db/pipeline/pipeline_d.cpp
@@ -255,7 +255,9 @@ createRandomCursorExecutor(const CollectionPtr& coll,
                                                   std::move(ws),
                                                   std::move(root),
                                                   &coll,
-                                                  PlanYieldPolicy::YieldPolicy::YIELD_AUTO,
+                                                  opCtx->inMultiDocumentTransaction()
+                                                      ? PlanYieldPolicy::YieldPolicy::INTERRUPT_ONLY
+                                                      : PlanYieldPolicy::YieldPolicy::YIELD_AUTO,
                                                   QueryPlannerParams::RETURN_OWNED_DATA);
     if (!execStatus.isOK()) {
         return execStatus.getStatus();
